Added wayfinder styling to navigation - CSS

--- a/style.css
+++ b/style.css
@@ -6417,23 +6417,23 @@ header {
     text-align: center;
   }
 }
-/* line 209, sass/modules/_menus.scss */
-.main-navigation li:nth-child(1) a:hover, .main-navigation li:nth-child(1) a.current-menu-item, .main-navigation li:nth-child(1) a.current-page-ancestor {
+/* line 219, sass/modules/_menus.scss */
+.main-navigation li:nth-child(1).current-menu-item a, .main-navigation li:nth-child(1).current-page-ancestor a, .main-navigation li:nth-child(1):hover a, .main-navigation li:nth-child(1):focus a, .main-navigation li:nth-child(1):active a {
   border-bottom: 3px solid #712880;
 }
-/* line 214, sass/modules/_menus.scss */
-.main-navigation li:nth-child(2) a:hover, .main-navigation li:nth-child(2) a.current-menu-item, .main-navigation li:nth-child(2) a.current-page-ancestor {
+/* line 229, sass/modules/_menus.scss */
+.main-navigation li:nth-child(2).current-menu-item a, .main-navigation li:nth-child(2).current-page-ancestor a, .main-navigation li:nth-child(2):hover a, .main-navigation li:nth-child(2):focus a, .main-navigation li:nth-child(2):active a {
   border-bottom: 3px solid #2791bd;
 }
-/* line 219, sass/modules/_menus.scss */
-.main-navigation li:nth-child(3) a:hover, .main-navigation li:nth-child(3) a.current-menu-item, .main-navigation li:nth-child(3) a.current-page-ancestor {
+/* line 238, sass/modules/_menus.scss */
+.main-navigation li:nth-child(3).current-menu-item a, .main-navigation li:nth-child(3).current-page-ancestor a, .main-navigation li:nth-child(3):hover a, .main-navigation li:nth-child(3):focus a, .main-navigation li:nth-child(3):active a {
   border-bottom: 3px solid #4fd1a1;
 }
-/* line 224, sass/modules/_menus.scss */
-.main-navigation li:nth-child(4) a:hover, .main-navigation li:nth-child(4) a.current-menu-item, .main-navigation li:nth-child(4) a.current-page-ancestor {
+/* line 248, sass/modules/_menus.scss */
+.main-navigation li:nth-child(4).current-menu-item a, .main-navigation li:nth-child(4).current-page-ancestor a, .main-navigation li:nth-child(4):hover a, .main-navigation li:nth-child(4):focus a, .main-navigation li:nth-child(4):active a {
   border-bottom: 3px solid #fec935;
 }
-/* line 230, sass/modules/_menus.scss */
+/* line 258, sass/modules/_menus.scss */
 .main-navigation a {
   display: block;
   text-decoration: none;
@@ -6445,7 +6445,7 @@ header {
   text-transform: uppercase;
 }
 
-/* line 247, sass/modules/_menus.scss */
+/* line 275, sass/modules/_menus.scss */
 .menu-toggle {
   display: none;
   text-transform: uppercase;
@@ -6455,7 +6455,7 @@ header {
   cursor: pointer;
 }
 @media screen and (max-width: 480px) {
-  /* line 247, sass/modules/_menus.scss */
+  /* line 275, sass/modules/_menus.scss */
   .menu-toggle {
     display: block;
     text-align: center;
@@ -6465,21 +6465,21 @@ header {
   }
 }
 
-/* line 269, sass/modules/_menus.scss */
+/* line 297, sass/modules/_menus.scss */
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
 .post-navigation {
   margin: 0 0 1.5em;
   overflow: hidden;
 }
-/* line 274, sass/modules/_menus.scss */
+/* line 302, sass/modules/_menus.scss */
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
   float: left;
   width: 50%;
 }
-/* line 279, sass/modules/_menus.scss */
+/* line 307, sass/modules/_menus.scss */
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
@@ -6488,7 +6488,7 @@ header {
   width: 50%;
 }
 
-/* line 286, sass/modules/_menus.scss */
+/* line 314, sass/modules/_menus.scss */
 .banner-sidebar {
   background-color: #3a3a3a;
   background-image: url("img/overlay.png");
@@ -6497,75 +6497,75 @@ header {
   background-position-y: 30px;
 }
 
-/* line 294, sass/modules/_menus.scss */
+/* line 322, sass/modules/_menus.scss */
 .side-menu {
   position: absolute;
   left: 50px;
   width: 200px;
   z-index: 100;
 }
-/* line 300, sass/modules/_menus.scss */
+/* line 328, sass/modules/_menus.scss */
 .side-menu .list {
   padding: 20px;
   background: #fec935;
 }
-/* line 305, sass/modules/_menus.scss */
+/* line 333, sass/modules/_menus.scss */
 .side-menu .info {
   border-bottom: 2px solid #cfcfcf;
   border-top: 2px solid #cfcfcf;
   padding: 10px;
   text-align: center;
 }
-/* line 310, sass/modules/_menus.scss */
+/* line 338, sass/modules/_menus.scss */
 .side-menu .info a {
   font-family: "Avenir Next Cyr W00 Italic";
   font-size: 10px;
 }
-/* line 318, sass/modules/_menus.scss */
+/* line 346, sass/modules/_menus.scss */
 .side-menu .apply {
   padding: 10px;
   text-align: center;
   background: #616161;
   margin-top: 10px;
 }
-/* line 324, sass/modules/_menus.scss */
+/* line 352, sass/modules/_menus.scss */
 .side-menu .apply a {
   text-transform: uppercase;
   color: #fec935;
 }
-/* line 329, sass/modules/_menus.scss */
+/* line 357, sass/modules/_menus.scss */
 .side-menu .apply:hover {
   background: #fec935;
 }
-/* line 332, sass/modules/_menus.scss */
+/* line 360, sass/modules/_menus.scss */
 .side-menu .apply:hover a {
   color: #616161;
 }
-/* line 338, sass/modules/_menus.scss */
+/* line 366, sass/modules/_menus.scss */
 .side-menu a {
   color: #616161;
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 15px;
   line-height: 30px;
 }
-/* line 346, sass/modules/_menus.scss */
+/* line 374, sass/modules/_menus.scss */
 .side-menu .scrolled-item a {
   border-bottom: 3px solid #616161;
 }
 @media screen and (max-width: 480px) {
-  /* line 294, sass/modules/_menus.scss */
+  /* line 322, sass/modules/_menus.scss */
   .side-menu {
     display: none;
   }
 }
 
-/* line 356, sass/modules/_menus.scss */
+/* line 384, sass/modules/_menus.scss */
 .utilities-nav {
   background: #eeeeee;
   float: left;
   width: 100%;
 }
-/* line 361, sass/modules/_menus.scss */
+/* line 389, sass/modules/_menus.scss */
 .utilities-nav a {
   color: #8f8f8f;
   text-transform: uppercase;
@@ -6573,25 +6573,25 @@ header {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 @media screen and (max-width: 768px) {
-  /* line 361, sass/modules/_menus.scss */
+  /* line 389, sass/modules/_menus.scss */
   .utilities-nav a {
     font-size: 7px;
   }
 }
-/* line 373, sass/modules/_menus.scss */
+/* line 401, sass/modules/_menus.scss */
 .utilities-nav ul {
   float: right;
   margin: 0 30px;
 }
 @media screen and (max-width: 480px) {
-  /* line 373, sass/modules/_menus.scss */
+  /* line 401, sass/modules/_menus.scss */
   .utilities-nav ul {
     float: none;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 383, sass/modules/_menus.scss */
+/* line 411, sass/modules/_menus.scss */
 .utilities-nav ul li {
   float: left;
   position: relative;
@@ -6599,23 +6599,23 @@ header {
   display: inline;
 }
 @media screen and (max-width: 480px) {
-  /* line 383, sass/modules/_menus.scss */
+  /* line 411, sass/modules/_menus.scss */
   .utilities-nav ul li {
     padding: 0 3px;
     float: none;
   }
 }
-/* line 394, sass/modules/_menus.scss */
+/* line 422, sass/modules/_menus.scss */
 .utilities-nav ul li.current_page_parent a, .utilities-nav ul li.current-menu-item a, .utilities-nav ul li.current-page-ancestor a {
   color: black;
 }
 
-/* line 401, sass/modules/_menus.scss */
+/* line 429, sass/modules/_menus.scss */
 .banner-navigation li:hover {
   opacity: 0.7;
 }
 
-/* line 405, sass/modules/_menus.scss */
+/* line 433, sass/modules/_menus.scss */
 .utilities-nav a:hover {
   color: black;
   opacity: 1;
