--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -205,23 +205,51 @@
 			}
 		}
 
-		&:nth-child(1) a {
-			&:hover, &.current-menu-item, &.current-page-ancestor {
+		&:nth-child(1){
+			&.current-menu-item, 
+			&.current-page-ancestor{
+				a{
+
+				}
+			}
+		}
+
+		&:nth-child(1) {
+
+			&.current-menu-item a, 
+			&.current-page-ancestor a,
+			&:hover a,
+			&:focus a,
+			&:active a{
 				border-bottom: 3px solid $purple-tertiary;
 			}
 		}
-		&:nth-child(2) a {
-			&:hover, &.current-menu-item, &.current-page-ancestor {
+		&:nth-child(2) {
+
+			&.current-menu-item a, 
+			&.current-page-ancestor a,
+			&:hover a,
+			&:focus a,
+			&:active a{
 				border-bottom: 3px solid $blue-primary;
 			}
 		}
-		&:nth-child(3) a {
-			&:hover, &.current-menu-item, &.current-page-ancestor {
+		&:nth-child(3) {
+			&.current-menu-item a, 
+			&.current-page-ancestor a,
+			&:hover a,
+			&:focus a,
+			&:active a{
+
 				border-bottom: 3px solid $green-primary;
 			}
 		}
-		&:nth-child(4) a {
-			&:hover, &.current-menu-item, &.current-page-ancestor {
+		&:nth-child(4) {
+			&.current-menu-item a, 
+			&.current-page-ancestor a,
+			&:hover a,
+			&:focus a,
+			&:active a{
 				border-bottom: 3px solid $yellow-primary;
 			}
 		}
