--- a/style.css
+++ b/style.css
@@ -6266,27 +6266,27 @@ header {
   left: -999em;
   top: 0;
 }
-/* line 30, sass/modules/_menus.scss */
+/* line 31, sass/modules/_menus.scss */
 .banner-navigation ul ul li:hover > ul, .banner-navigation ul ul li.focus > ul {
   left: 100%;
 }
-/* line 36, sass/modules/_menus.scss */
+/* line 37, sass/modules/_menus.scss */
 .banner-navigation ul ul a {
   width: 200px;
 }
-/* line 49, sass/modules/_menus.scss */
+/* line 51, sass/modules/_menus.scss */
 .banner-navigation ul li:hover > ul,
 .banner-navigation ul li.focus > ul {
   left: auto;
 }
-/* line 54, sass/modules/_menus.scss */
+/* line 56, sass/modules/_menus.scss */
 .banner-navigation li {
   float: left;
   position: relative;
   width: 100%;
   margin: 10px 0 20px;
 }
-/* line 64, sass/modules/_menus.scss */
+/* line 66, sass/modules/_menus.scss */
 .banner-navigation li::before {
   content: "for";
   color: #fec935;
@@ -6296,7 +6296,7 @@ header {
   top: 0px;
   left: 4px;
 }
-/* line 74, sass/modules/_menus.scss */
+/* line 76, sass/modules/_menus.scss */
 .banner-navigation a {
   display: block;
   text-decoration: none;
@@ -6308,26 +6308,26 @@ header {
 
 /* Small menu. */
 @media only screen and (min-width: 767px) and (max-width: 925px) {
-  /* line 92, sass/modules/_menus.scss */
+  /* line 94, sass/modules/_menus.scss */
   .banner-navigation a {
     font-size: 0.75em;
   }
 }
-/* line 104, sass/modules/_menus.scss */
+/* line 106, sass/modules/_menus.scss */
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
 .post-navigation {
   margin: 0 0 1.5em;
   overflow: hidden;
 }
-/* line 109, sass/modules/_menus.scss */
+/* line 111, sass/modules/_menus.scss */
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
   float: left;
   width: 50%;
 }
-/* line 114, sass/modules/_menus.scss */
+/* line 116, sass/modules/_menus.scss */
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
@@ -6336,20 +6336,20 @@ header {
   width: 50%;
 }
 
-/* line 123, sass/modules/_menus.scss */
+/* line 125, sass/modules/_menus.scss */
 .main-navigation {
   clear: both;
   display: block;
   float: right;
 }
 @media screen and (max-width: 480px) {
-  /* line 123, sass/modules/_menus.scss */
+  /* line 125, sass/modules/_menus.scss */
   .main-navigation {
     float: left;
     display: none;
   }
 }
-/* line 133, sass/modules/_menus.scss */
+/* line 135, sass/modules/_menus.scss */
 .main-navigation ul {
   display: block;
   list-style: none;
@@ -6358,82 +6358,143 @@ header {
   padding-top: 25px;
 }
 @media screen and (max-width: 860px) {
-  /* line 133, sass/modules/_menus.scss */
+  /* line 135, sass/modules/_menus.scss */
   .main-navigation ul {
     padding-top: 15px;
   }
 }
-/* line 144, sass/modules/_menus.scss */
+/* line 146, sass/modules/_menus.scss */
 .main-navigation ul ul {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   float: left;
+  background-color: white;
   position: absolute;
-  top: 1.5em;
+  top: 100%;
   left: -999em;
   z-index: 99999;
+  padding: 15px;
 }
-/* line 152, sass/modules/_menus.scss */
+@media screen and (max-width: 925px) {
+  /* line 146, sass/modules/_menus.scss */
+  .main-navigation ul ul {
+    display: none;
+  }
+}
+/* line 160, sass/modules/_menus.scss */
 .main-navigation ul ul ul {
   left: -999em;
   top: 0;
 }
-/* line 158, sass/modules/_menus.scss */
+/* line 166, sass/modules/_menus.scss */
+.main-navigation ul ul li {
+  margin-left: 0;
+}
+/* line 169, sass/modules/_menus.scss */
 .main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
   left: 100%;
 }
-/* line 164, sass/modules/_menus.scss */
+/* line 175, sass/modules/_menus.scss */
 .main-navigation ul ul a {
   width: 200px;
+  text-transform: capitalize;
 }
-/* line 177, sass/modules/_menus.scss */
+/* line 189, sass/modules/_menus.scss */
 .main-navigation ul li:hover > ul,
 .main-navigation ul li.focus > ul {
   left: auto;
 }
-/* line 182, sass/modules/_menus.scss */
+/* line 194, sass/modules/_menus.scss */
 .main-navigation li {
   float: left;
   position: relative;
   margin: 0 5px 5px 25px;
 }
 @media screen and (max-width: 925px) {
-  /* line 182, sass/modules/_menus.scss */
+  /* line 194, sass/modules/_menus.scss */
   .main-navigation li {
     margin: 0 5px 5px 5px;
     float: left;
     width: 100%;
   }
 }
-/* line 197, sass/modules/_menus.scss */
+/* line 209, sass/modules/_menus.scss */
 .main-navigation li a {
   float: left;
   border-bottom: 3px solid white;
 }
 @media screen and (max-width: 925px) {
-  /* line 197, sass/modules/_menus.scss */
+  /* line 209, sass/modules/_menus.scss */
   .main-navigation li a {
     font-size: 12px;
     width: 100%;
     text-align: center;
   }
 }
-/* line 219, sass/modules/_menus.scss */
-.main-navigation li:nth-child(1).current-menu-item a, .main-navigation li:nth-child(1).current-page-ancestor a, .main-navigation li:nth-child(1):hover a, .main-navigation li:nth-child(1):focus a, .main-navigation li:nth-child(1):active a {
+/* line 223, sass/modules/_menus.scss */
+.main-navigation li:nth-child(1).current-menu-item > a, .main-navigation li:nth-child(1).current_page_ancestor > a, .main-navigation li:nth-child(1):hover > a, .main-navigation li:nth-child(1):focus > a, .main-navigation li:nth-child(1):active > a {
   border-bottom: 3px solid #712880;
 }
-/* line 229, sass/modules/_menus.scss */
-.main-navigation li:nth-child(2).current-menu-item a, .main-navigation li:nth-child(2).current-page-ancestor a, .main-navigation li:nth-child(2):hover a, .main-navigation li:nth-child(2):focus a, .main-navigation li:nth-child(2):active a {
+/* line 233, sass/modules/_menus.scss */
+.main-navigation li:nth-child(1) ul li a {
+  border-bottom: 3px solid white;
+}
+/* line 235, sass/modules/_menus.scss */
+.main-navigation li:nth-child(1) ul li a:hover, .main-navigation li:nth-child(1) ul li a:focus, .main-navigation li:nth-child(1) ul li a:active {
+  border-bottom: 3px solid #712880;
+}
+/* line 242, sass/modules/_menus.scss */
+.main-navigation li:nth-child(1) ul li.current-menu-item > a {
+  border-bottom: 3px solid #712880;
+}
+/* line 251, sass/modules/_menus.scss */
+.main-navigation li:nth-child(2).current-menu-item > a, .main-navigation li:nth-child(2).current_page_ancestor > a, .main-navigation li:nth-child(2):hover > a, .main-navigation li:nth-child(2):focus > a, .main-navigation li:nth-child(2):active > a {
   border-bottom: 3px solid #2791bd;
 }
-/* line 238, sass/modules/_menus.scss */
-.main-navigation li:nth-child(3).current-menu-item a, .main-navigation li:nth-child(3).current-page-ancestor a, .main-navigation li:nth-child(3):hover a, .main-navigation li:nth-child(3):focus a, .main-navigation li:nth-child(3):active a {
+/* line 261, sass/modules/_menus.scss */
+.main-navigation li:nth-child(2) ul li a {
+  border-bottom: 3px solid white;
+}
+/* line 263, sass/modules/_menus.scss */
+.main-navigation li:nth-child(2) ul li a:hover, .main-navigation li:nth-child(2) ul li a:focus, .main-navigation li:nth-child(2) ul li a:active {
+  border-bottom: 3px solid #2791bd;
+}
+/* line 270, sass/modules/_menus.scss */
+.main-navigation li:nth-child(2) ul li.current-menu-item > a {
+  border-bottom: 3px solid #2791bd;
+}
+/* line 278, sass/modules/_menus.scss */
+.main-navigation li:nth-child(3).current-menu-item > a, .main-navigation li:nth-child(3).current_page_ancestor > a, .main-navigation li:nth-child(3):hover > a, .main-navigation li:nth-child(3):focus > a, .main-navigation li:nth-child(3):active > a {
   border-bottom: 3px solid #4fd1a1;
 }
-/* line 248, sass/modules/_menus.scss */
-.main-navigation li:nth-child(4).current-menu-item a, .main-navigation li:nth-child(4).current-page-ancestor a, .main-navigation li:nth-child(4):hover a, .main-navigation li:nth-child(4):focus a, .main-navigation li:nth-child(4):active a {
+/* line 289, sass/modules/_menus.scss */
+.main-navigation li:nth-child(3) ul li a {
+  border-bottom: 3px solid white;
+}
+/* line 291, sass/modules/_menus.scss */
+.main-navigation li:nth-child(3) ul li a:hover, .main-navigation li:nth-child(3) ul li a:focus, .main-navigation li:nth-child(3) ul li a:active {
+  border-bottom: 3px solid #4fd1a1;
+}
+/* line 298, sass/modules/_menus.scss */
+.main-navigation li:nth-child(3) ul li.current-menu-item > a {
+  border-bottom: 3px solid #4fd1a1;
+}
+/* line 307, sass/modules/_menus.scss */
+.main-navigation li:nth-child(4).current-menu-item > a, .main-navigation li:nth-child(4).current_page_ancestor > a, .main-navigation li:nth-child(4):hover a, .main-navigation li:nth-child(4):focus a, .main-navigation li:nth-child(4):active a {
   border-bottom: 3px solid #fec935;
 }
-/* line 258, sass/modules/_menus.scss */
+/* line 317, sass/modules/_menus.scss */
+.main-navigation li:nth-child(4) ul li a {
+  border-bottom: 3px solid white;
+}
+/* line 320, sass/modules/_menus.scss */
+.main-navigation li:nth-child(4) ul li a:hover, .main-navigation li:nth-child(4) ul li a:focus, .main-navigation li:nth-child(4) ul li a:active {
+  border-bottom: 3px solid #fec935;
+}
+/* line 327, sass/modules/_menus.scss */
+.main-navigation li:nth-child(4) ul li.current-menu-item > a {
+  border-bottom: 3px solid #fec935;
+}
+/* line 336, sass/modules/_menus.scss */
 .main-navigation a {
   display: block;
   text-decoration: none;
@@ -6445,7 +6506,7 @@ header {
   text-transform: uppercase;
 }
 
-/* line 275, sass/modules/_menus.scss */
+/* line 353, sass/modules/_menus.scss */
 .menu-toggle {
   display: none;
   text-transform: uppercase;
@@ -6455,7 +6516,7 @@ header {
   cursor: pointer;
 }
 @media screen and (max-width: 480px) {
-  /* line 275, sass/modules/_menus.scss */
+  /* line 353, sass/modules/_menus.scss */
   .menu-toggle {
     display: block;
     text-align: center;
@@ -6465,21 +6526,21 @@ header {
   }
 }
 
-/* line 297, sass/modules/_menus.scss */
+/* line 375, sass/modules/_menus.scss */
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
 .post-navigation {
   margin: 0 0 1.5em;
   overflow: hidden;
 }
-/* line 302, sass/modules/_menus.scss */
+/* line 380, sass/modules/_menus.scss */
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
   float: left;
   width: 50%;
 }
-/* line 307, sass/modules/_menus.scss */
+/* line 385, sass/modules/_menus.scss */
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
@@ -6488,7 +6549,7 @@ header {
   width: 50%;
 }
 
-/* line 314, sass/modules/_menus.scss */
+/* line 392, sass/modules/_menus.scss */
 .banner-sidebar {
   background-color: #3a3a3a;
   background-image: url("img/overlay.png");
@@ -6497,75 +6558,75 @@ header {
   background-position-y: 30px;
 }
 
-/* line 322, sass/modules/_menus.scss */
+/* line 400, sass/modules/_menus.scss */
 .side-menu {
   position: absolute;
   left: 50px;
   width: 200px;
   z-index: 100;
 }
-/* line 328, sass/modules/_menus.scss */
+/* line 406, sass/modules/_menus.scss */
 .side-menu .list {
   padding: 20px;
   background: #fec935;
 }
-/* line 333, sass/modules/_menus.scss */
+/* line 411, sass/modules/_menus.scss */
 .side-menu .info {
   border-bottom: 2px solid #cfcfcf;
   border-top: 2px solid #cfcfcf;
   padding: 10px;
   text-align: center;
 }
-/* line 338, sass/modules/_menus.scss */
+/* line 416, sass/modules/_menus.scss */
 .side-menu .info a {
   font-family: "Avenir Next Cyr W00 Italic";
   font-size: 10px;
 }
-/* line 346, sass/modules/_menus.scss */
+/* line 424, sass/modules/_menus.scss */
 .side-menu .apply {
   padding: 10px;
   text-align: center;
   background: #616161;
   margin-top: 10px;
 }
-/* line 352, sass/modules/_menus.scss */
+/* line 430, sass/modules/_menus.scss */
 .side-menu .apply a {
   text-transform: uppercase;
   color: #fec935;
 }
-/* line 357, sass/modules/_menus.scss */
+/* line 435, sass/modules/_menus.scss */
 .side-menu .apply:hover {
   background: #fec935;
 }
-/* line 360, sass/modules/_menus.scss */
+/* line 438, sass/modules/_menus.scss */
 .side-menu .apply:hover a {
   color: #616161;
 }
-/* line 366, sass/modules/_menus.scss */
+/* line 444, sass/modules/_menus.scss */
 .side-menu a {
   color: #616161;
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 15px;
   line-height: 30px;
 }
-/* line 374, sass/modules/_menus.scss */
+/* line 452, sass/modules/_menus.scss */
 .side-menu .scrolled-item a {
   border-bottom: 3px solid #616161;
 }
 @media screen and (max-width: 480px) {
-  /* line 322, sass/modules/_menus.scss */
+  /* line 400, sass/modules/_menus.scss */
   .side-menu {
     display: none;
   }
 }
 
-/* line 384, sass/modules/_menus.scss */
+/* line 462, sass/modules/_menus.scss */
 .utilities-nav {
   background: #eeeeee;
   float: left;
   width: 100%;
 }
-/* line 389, sass/modules/_menus.scss */
+/* line 467, sass/modules/_menus.scss */
 .utilities-nav a {
   color: #8f8f8f;
   text-transform: uppercase;
@@ -6573,25 +6634,25 @@ header {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 @media screen and (max-width: 768px) {
-  /* line 389, sass/modules/_menus.scss */
+  /* line 467, sass/modules/_menus.scss */
   .utilities-nav a {
     font-size: 7px;
   }
 }
-/* line 401, sass/modules/_menus.scss */
+/* line 479, sass/modules/_menus.scss */
 .utilities-nav ul {
   float: right;
   margin: 0 30px;
 }
 @media screen and (max-width: 480px) {
-  /* line 401, sass/modules/_menus.scss */
+  /* line 479, sass/modules/_menus.scss */
   .utilities-nav ul {
     float: none;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 411, sass/modules/_menus.scss */
+/* line 489, sass/modules/_menus.scss */
 .utilities-nav ul li {
   float: left;
   position: relative;
@@ -6599,23 +6660,23 @@ header {
   display: inline;
 }
 @media screen and (max-width: 480px) {
-  /* line 411, sass/modules/_menus.scss */
+  /* line 489, sass/modules/_menus.scss */
   .utilities-nav ul li {
     padding: 0 3px;
     float: none;
   }
 }
-/* line 422, sass/modules/_menus.scss */
+/* line 500, sass/modules/_menus.scss */
 .utilities-nav ul li.current_page_parent a, .utilities-nav ul li.current-menu-item a, .utilities-nav ul li.current-page-ancestor a {
   color: black;
 }
 
-/* line 429, sass/modules/_menus.scss */
+/* line 507, sass/modules/_menus.scss */
 .banner-navigation li:hover {
   opacity: 0.7;
 }
 
-/* line 433, sass/modules/_menus.scss */
+/* line 511, sass/modules/_menus.scss */
 .utilities-nav a:hover {
   color: black;
   opacity: 1;
