--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -643,21 +643,21 @@ footer.seventeen-tth{
 			font-size:12px;
 			text-transform:uppercase;
 			font-family: "Avenir Next Cyr W00 Bold";
-			margin:10px 0;
+			margin:10px 0 0 0;
 		}
 
 		input{
 			background-color:transparent;
 			border-bottom:2px solid $new-blue;
-			padding:0;
+			padding:10px 0;
 			color:$new-blue;
 			position:relative;
-			height:20px;
+			height:30px;
 			z-index: 2;
 			}
 
 		.form{
-			height:20px;
+			height:30px;
 			overflow:hidden;
 			position:relative;
 
@@ -677,7 +677,7 @@ footer.seventeen-tth{
 				background:$white;
 				top:100%;
 				position:absolute;
-				height:20px;
+				height:30px;
 				transition:all .2s ease-in-out;
 				z-index: 1;
 			}
